--- a/Telegram-bot-save-url/appsettings.json
+++ b/Telegram-bot-save-url/appsettings.json
@@ -1,3 +1,5 @@
 {
-  "connectionString": "server=localhost;user=root;password=root;database=testdb;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=root;Database=testdb;"
+  }
 }
