--- a/WebApplicationBooks/appsettings.Development.json
+++ b/WebApplicationBooks/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=root;Database=testdb;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
