--- a/WebApplicationBooks/WebApplicationBooks.csproj
+++ b/WebApplicationBooks/WebApplicationBooks.csproj
@@ -16,10 +16,14 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\boostrap\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
