--- a/WebApplicationBooks/WebApplicationBooks.csproj
+++ b/WebApplicationBooks/WebApplicationBooks.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
@@ -23,7 +25,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\boostrap\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
